--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.PodWave"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31"
         tools:ignore="ForegroundServicePermission">
         <activity
