--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,17 @@
         tools:ignore="ForegroundServicePermission">
         <activity
             android:name=".ui.activity.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.PodWave">
-        </activity>
-        <activity android:name="com.example.podwave.ui.activity.PodcastActivity" />
+            android:theme="@style/Theme.PodWave"
+            tools:ignore="DiscouragedApi" />
+        <activity android:name="com.example.podwave.ui.activity.PodcastActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi" />
         <activity android:name="com.example.podwave.ui.activity.SplashActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PodWave">
